work out sql scripts issues and verify unmutable set creation