@@ -10,6 +10,8 @@ import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 @Service
@@ -22,7 +24,7 @@ public class VetSignupServiceImpl implements VetSignupService {
     public Vet signup(SignupVetDto dto) throws BadEntityException {
         ModelMapper mapper = new ModelMapper();
         Vet vet = mapper.map(dto, Vet.class);
-        vet.setRoles(Set.of(Roles.VET, Roles.USER));
+        vet.setRoles(new HashSet<>(Arrays.asList(Roles.VET, Roles.USER)));
 
         Vet saved = vetService.create(vet);
         try {
